fix checkbox alignment

--- a/frontend/source/sass/admin/changelists.scss
+++ b/frontend/source/sass/admin/changelists.scss
@@ -29,7 +29,7 @@
 }
 
 td.action-checkbox {
-  padding: 0 0 0 0.25em;
+  padding: 0.45em 0 0 0.25em;
   input[type=checkbox],
   input[type=radio]{
     position: static;
